# maycast_recorder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_ja.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.dokploy.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-pages.yml
docs/: development-plan.md  dokploy-deployment.md  production-deployment.md  project.md  refactoring-phase1-complete.md  refactoring-phase2-complete.md  refactoring-phase3-complete.md  refactoring-proposal.md  standalone-mode.md  thema-color.md
localstack/: init-s3.sh
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: development.conf  dokploy.conf  production.conf.disabled
scripts/: generate-dev-certs.sh  init-letsencrypt.sh
