[workspace]
resolver = "2"
members = [
    "packages/common",
    "packages/wasm-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maycast Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Utilities
blake3 = "1.5"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Media processing
mp4 = "0.14"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen units for better optimization
strip = true        # Strip symbols from binary
